--- a/src/app/management/cds-management/cd-list.component.html
+++ b/src/app/management/cds-management/cd-list.component.html
@@ -4,10 +4,10 @@
             {{title}}
         </div>
         <div class="user-management-actions">
-            <a (click)="addElement()">Dodaj</a>
-            <a (click)="deleteCheckedElements()" [ngClass]="formManagement.anythingChecked() ? '' : 'disabled-when-none-checked'">Usuń</a>
+            <a *ngIf="admService.isAdm()" (click)="addElement()">Dodaj</a>
+            <a *ngIf="admService.isAdm()" (click)="deleteCheckedElements()" [ngClass]="formManagement.anythingChecked() ? '' : 'disabled-when-none-checked'">Usuń</a>
             <a (click)="refreshElements()">Odśwież</a>
-            <a (click)="uploadFileButton()">Wgraj plik</a>
+            <a *ngIf="admService.isAdm()" (click)="uploadFileButton()">Wgraj plik</a>
             <input id="uploadFileInput" type="file" (change)="uploadFile($event)" hidden>
         </div>
     </div>
@@ -64,22 +64,22 @@
         <div class="content-table">
             <table>
                 <thead class="table-headers">
-                    <th><input id="mainCheckbox" (click)="formManagement.applyToAllCheckboxes($event.target!)" type="checkbox"></th>
+                    <th *ngIf="admService.isAdm()"><input id="mainCheckbox" (click)="formManagement.applyToAllCheckboxes($event.target!)" type="checkbox"></th>
                     <th>Zespół</th>
                     <th>Album</th>
                     <th>Rok wydania</th>
                     <th>Gatunek</th>
-                    <th colspan="2">Akcje</th>
+                    <th *ngIf="admService.isAdm()" colspan="2">Akcje</th>
                 </thead>
                 <tr class="{{i%2 == 0 ? 'even':'odd'}}-row" *ngFor="let cd of getCdsToDisplay(), let i = index">
-                    <td><input type="checkbox" name="single-element-checkbox" (click)="formManagement.updateMainCheckbox()"></td>
+                    <td *ngIf="admService.isAdm()"><input type="checkbox" name="single-element-checkbox" (click)="formManagement.updateMainCheckbox()"></td>
                     <td class="hidden-field">{{cd.id}}</td>
                     <td>{{cd.band}}</td>
                     <td>{{cd.album}}</td>
                     <td>{{cd.year}}</td>
                     <td>{{cd.genre}}</td>
-                    <td class="action" (click)="editElement(cd)">Edytuj</td>
-                    <td class="action" (click)="deleteElement(cd.id)">Usuń</td>
+                    <td *ngIf="admService.isAdm()" class="action" (click)="editElement(cd)">Edytuj</td>
+                    <td *ngIf="admService.isAdm()" class="action" (click)="deleteElement(cd.id)">Usuń</td>
                 </tr>
                 <tr *ngIf="getCdsToDisplay().length === 0">
                     <td colspan="6" class="no-cds-info">
