show form with data on edit

--- a/src/app/management/cds-management/cd-form/cd-form.component.html
+++ b/src/app/management/cds-management/cd-form/cd-form.component.html
@@ -32,7 +32,7 @@
     </table>
     <div class="form-actions">
         <button type="reset">Wyczyść formularz</button>
-        <button type="submit">Dodaj</button>
+        <button type="submit">Zapisz</button>
         <button mat-dialog-close hidden id="dirty-close-button"></button>
     </div>
 </form>
