added edit method to services

--- a/src/app/management/books-management/book-form/book-form.component.html
+++ b/src/app/management/books-management/book-form/book-form.component.html
@@ -5,6 +5,10 @@
                 <h1>Dodaj nową książkę</h1>
             </th>
         </tr>
+        <tr hidden>
+            <td>Id</td>
+            <td><input type="text" formControlName="id"></td>
+        </tr>
         <tr>
             <td>Autor</td>
             <td><input type="text" placeholder="np. J.K. Rowling" formControlName="author"></td>
