--- a/src/app/management/cds-management/cd-form/cd-form.component.html
+++ b/src/app/management/cds-management/cd-form/cd-form.component.html
@@ -5,6 +5,10 @@
                 <h1>Dodaj nową płytę</h1>
             </th>
         </tr>
+        <tr hidden>
+            <td>Id</td>
+            <td><input type="text" formControlName="id"></td>
+        </tr>
         <tr>
             <td>Zespół</td>
             <td><input type="text" placeholder="np. Lej mi pół" formControlName="band"></td>
